# 1.20.38 (29343) Mar 10, 2009
3/10/09 change the latest Ladybug back to the behavior where the trace continues (and erases the beginning)
# 1.20.37 (29341) Mar 10, 2009
3/10/09 change the latest Ladybug back to the behavior where the trace continues (and erases the beginning)
# 1.20.36 (29139) Mar 2, 2009
> Removed bounding box from graphics
> Workaround for faded out buttons in time control panel

# 1.20.35 (28935) Feb 22, 2009
> Fixed: when you drive the bug with the remote using velocity or acceleration, the bug does not face the direction of velocity (always faces the same direction)
> Fixed: Rewind button should be disabled when the timeline knob is at t=0
> Fixed: Slowest mode should be slower (maybe 1/2 this speed)
> Fixed: Switching from playback mode to record should clear the vectors on the bug
> Fixed: Clear button should put the sim in record mode if it was in playback mode
> Reduced speed of all preset motions by 30%
> Fixed: Exception when switching back and forth between record and playback
> Fixed: Recording should stop when timeline is full. "Record" label should go from red to black when it stops recording. You can still move the bug, but it does not record any more. (In order to record more, you need to hit clear.)
> Fixed: the trace should stop when it stops recording, since the trace and timeline are coupled

# 1.20.33 (28801) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 1.20.32 (28726) Feb 18, 2009
Deploy aphid maze
# 1.20.31 (28723) Feb 18, 2009
Deploy first version of Aphid Maze
# 1.20.30 (28721) Feb 18, 2009
Improvements for Aphid Maze
> Fixed: open sim > click frictionless > click circular. Bug will not move.

# 1.20.29 (28260) Feb 8, 2009
> Bugfixes for remote control
> Ladybug comes to rest when turning friction on
> Increased size of return ladybug button
> Click-Drag from the center dot in Remote Control creates a vector